# superrpg

./: .gitignore  AGENTS.md  DEBUG_REPORT.md  DEPENDENCY_FIX_REPORT.md  RUN_GUIDE.md  problem.md  pyproject.toml  requirements.txt  rhodes_resonance_architecture_design.md  run_output.txt
.github/workflows/: ci.yml  nightly-tests.yml  performance-benchmarks.yml
configs/: README.md  model.json  model.json.template  modules.json
demo_data/: README.md
demo_data/characters/: dwarf_warrior.json  elf_mage.json
demo_data/configs/: demo_config.json
demo_data/lorebooks/: star_magic.json
demo_data/templates/: character_dialogue.json
docs/: README.md  api_usage_guide.md  index.html  integration_testing_guide.md  performance_benchmarks.md  superrpg_api_20251013_113118.html  superrpg_api_20251013_115556.yaml  superrpg_api_20251013_125912.json  troubleshooting_guide.md
docs/scripts/: api-generators.js  architecture-charts.js  example-generators.js  highlight.js  main.js  navigation.js  page-generators-complete.js  page-generators-extended.js  (+3 more)
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  test-output.css  tsconfig.json  vite.config.ts
scripts/: build_docker_image.sh  deploy_test_env.sh  setup_dev_env.sh
src/: __init__.py  bootstrap.py  main.py
tests/: conftest.py  test_character_card_service.py  test_e2e_workflow.py  test_integration.py  test_integration_suite.py  test_logging_pipeline.py  test_lorebook_service.py  test_performance.py  test_prompt_assembly_service.py  test_world_tools.py
(+154 files in other folders)
